<resources>
    <string name="app_name">Trivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="android">Android</string>
    <string name="trivia">Trivia</string>
    <string name="play">PLAY</string>
    <string name="blue">Blue</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="submit">Submit</string>
    <string name="congratulations">CONGRATULATIONS!!!</string>
    <string name="next_match">NEXT MATCH</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="about">About</string>
    <string name="about1">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules">Rules</string>
    <string name="rules1">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rule">Rules</string>
</resources>