<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="game"
            type="com.example.trivia.GameFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="278dp"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/gamepic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="289dp"
            android:layout_height="88dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:text="@{game.currentQuestion.text}"
            android:textColor="#131313"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="What color is the android marcot?" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="117dp"
            android:layout_height="191dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/gamepic2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.135" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/submit"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.385" />

        <RadioGroup
            android:id="@+id/questionRadioGroup"
            android:layout_width="161dp"
            android:layout_height="225dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.309">

            <RadioButton
                android:id="@+id/firstAnswerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{game.answers[0]}"
                android:textSize="18sp"
                tools:text="Red" />

            <RadioButton
                android:id="@+id/secondAnswerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{game.answers[1]}"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/green" />

            <RadioButton
                android:id="@+id/thirdAnswerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{game.answers[2]}"
                android:textSize="18sp"
                tools:text="@string/blue" />

            <RadioButton
                android:id="@+id/fourthAnswerRadioButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@{game.answers[3]}"
                android:textSize="18sp"
                tools:text="@string/orange" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>